--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     margin: 0 auto;
     width: 100%;
     /* 📍 Максимальная ширина для контейнера */
-    max-width: 1440px;
+    max-width: 1140px;
 }
 
 body {
@@ -36,6 +36,7 @@ header span {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     
 }
 
